--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -34,7 +34,49 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        background : no-repeat center/auto url("../assets/1.png"); 
+        background : no-repeat center/auto url("../assets/1.jpg"); 
+        border-radius: 0 0 200px 200px;
+
+    }
+}
+
+.home2{
+    width: 100%;
+    height: 100vh;
+    background-color: $second;
+    padding: 500px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $first;
+    margin-top: -200px;
+
+    img{
+        width: 30%;
+        animation: imgUp 0.7s linear infinite alternate;
+
     }
 
+    div{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 5rem;
+        height: 100vh;
+
+        p{
+            color: $first;
+            letter-spacing: 2px;
+            word-spacing: 5px;
+            font: 100 1.2rem ;
+        }
+    }
+}
+
+@keyframes imgUp {
+    to{
+        transform: translateY(-10px);
+    }
 }
