--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,7 +2,7 @@
 
 .home{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: $second; 
 
     > main{
@@ -10,7 +10,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        height: 100%;
+        min-height: 100%;
         width: 100%;
         text-transform: uppercase;
         padding: 2rem;
@@ -32,9 +32,10 @@
     &::before{
         content: "";
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         position: absolute;
-        background : no-repeat center/auto url("../assets/1.jpg"); 
+        background : no-repeat center/auto url("../assets/1.jpg");
+        background-size: cover; 
         border-radius: 0 0 200px 200px;
 
     }
@@ -42,21 +43,25 @@
 
 .home2{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: $second;
-    padding: 500px 0;
+    padding: 50px 0;
     display: flex;
     align-items: center;
     justify-content: center;
     color: $first;
-    margin-top: -200px;
+    
 
     img{
         width: 30%;
         animation: imgUp 0.7s linear infinite alternate;
 
     }
-
+    @keyframes imgUp {
+        to{
+            transform: translateY(-10px);
+        }
+    }
     div{
         width: 50%;
         display: flex;
@@ -75,8 +80,100 @@
     }
 }
 
-@keyframes imgUp {
-    to{
-        transform: translateY(-10px);
+
+
+.home3{
+    background-color: $second;
+    min-height: 120vh;
+    width: 100%;
+
+
+
+    div{
+    width: 70%;
+    min-height: 100vh;
+    padding: 20px 40px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 200px 200px 0;
+    background-color: $third;
+    color: white;
+    word-wrap: break-word;
     }
+
+    h1{
+        border-bottom: 2px solid $first;
+        padding: 2px;
+        text-transform: uppercase;
+    }
+
+    p{
+        padding: 20px;
+        letter-spacing: 1px;
+        word-spacing: 5px;
+        line-height: 170%;
+    }
+}
+
+.home4{
+    padding-top: 10vh;
+    width: 100%;
+    min-height: 120vh;
+    background-color: $second;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+   > div{
+        width: 70%;
+        min-height: 70vh;
+        padding: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $third;
+        border-radius: 200px 0px 0px 200px;
+        flex-direction: column;
+
+        >h1{
+            border-bottom: 2px solid $first ;
+            text-transform: uppercase;
+            padding: 2px;
+            color: white;
+        }
+
+        >article{
+            padding: 20px;
+            margin: 2rem 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            >div{
+                animation: imgUp 0.7s linear infinite alternate;
+                width: 8rem;
+                height: 8rem;
+                border-radius: 50%;
+                background-color: $first;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 1rem;
+                transition: all 0.7s;
+                cursor: pointer;
+
+                &:hover{
+                    filter: invert(1);
+                }
+
+                svg{
+                    font-size: 4rem;
+                }
+            }
+        }
+        
+    }
+
 }
